syntax = "proto3";
package userservice;
option java_package = "app.groopy.protobuf";
option java_outer_classname = "UserServiceProto";

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignInResponse {
  UserDetails data = 1;
  string token = 2;
}

message SignUpRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string photo_url = 4;
}

message SignUpResponse {
  UserDetails data = 1;
  string token = 2;
}

message UserDetailsResponse {
  UserDetails data = 1;
}

message UserDetails {
  string user_id = 1;
  string email = 2;
}

message ErrorResponse {
  string error_message = 1;
}